--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
       <td><progress min=0 max=100 value=100 id="posbar" class="pos"></progress></td>
     </tr>
     <tr>
-      <td class="senti-label">Negtive Sentiment</td>
+      <td class="senti-label">Negative Sentiment</td>
       <td><progress min=0 max=100 value=100 id="negbar" class="neg"></progress></td>
     </tr>
   </table>
